# whatnut

./: .gitignore  README.md  config.json  evidence.json  index.html  index.json  methodology.json  myst.search.json  myst.xref.json  objects.inv  pyproject.toml  results.json  simulation.json  sitemap.xml  vercel.json
.github/workflows/: ci.yml
_build/logs/: myst.build.json
docs/: .gitignore  _quarto.yml  appendix.md  appendix.qmd  index.md  index.qmd  methodology.md  model_approaches.md  model_predictions.md  myst.yml  references.bib
docs/notebooks/: evidence.ipynb  results.ipynb  simulation.ipynb
docs/theme/: brand.scss  chrome.html  footer.html  header.html
evidence/: index.html
methodology/: index.html
results/: index.html
scripts/: install_quarto.sh  render_docs.py
simulation/: index.html
src/whatnut/: __init__.py  bayesian_model.py  config.py  evidence.py  figures.py  lifecycle.py  lifecycle_pathways.py  model.py  nuts.py  paper_results.py  pipeline.py  precomputed.py  results.py  simulation.py
src/whatnut/data/: cause_fractions.yaml  constants.yaml  mortality.yaml  nuts.yaml  priors.yaml  quality_weights.yaml  results.json
src/whatnut/data/raw/retail_prices/: retail_prices.csv
src/whatnut/data/raw/usda_fdc/: 170162.json  170178.json  170182.json  170184.json  170187.json  170567.json  170581.json  172430.json  summary.json
src/whatnut/data_build/: __init__.py  cdc_cause_fractions.py  cdc_life_tables.py  retail_prices.py  usda_fdc.py
tests/: test_bayesian_model.py  test_config.py  test_evidence.py  test_lifecycle.py  test_lifecycle_pathways.py  test_model.py  test_nuts.py  test_paper_results.py  test_pipeline.py  test_render_docs.py  test_results.py  test_simulation.py  test_validation.py
